--- a/templates/oscar/partials/brand.html
+++ b/templates/oscar/partials/brand.html
@@ -3,10 +3,9 @@ style='font-family: "Varela Round", -apple-system, BlinkMacSystemFont, "Segoe UI
   font-size: 5rem;
   line-height: 5rem;
   letter-spacing: 2rem;
-  background: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0));
+  background: linear-gradient(180deg, rgba(173,173,174,1) 3%, rgba(0,0,0,1) 29%, rgba(0,117,123,1) 43%, rgba(0,124,130,1) 96%);
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
-          background-clip: text;
-  '>
-    SlabShop
+          background-clip: text;'>
+    Boardshop
 </h1>
